Merged revisions 1382103 via  git cherry-pick from https://svn.apache.org/repos/asf/cxf/trunk
........
  r1382103 | dkulp | 2012-09-07 13:56:51 -0400 (Fri, 07 Sep 2012) | 2 lines

  More error message updates

........

git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.6.x-fixes@1383527 13f79535-47bb-0310-9956-ffa450edef68